# commander-orchestrator

./: .gitignore  HANDOFF.md  LICENSE  Orchestrator.cmd  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: danger_list.txt.example
scripts/: curate_batch.py  generate_positives.py  generate_sameprocess.py  repro_tier2_claude.py  run_continuous.py  smoke_claude_cli.py  smoke_dirty_tree.py  smoke_failure.py  smoke_git_ops.py  smoke_health.py  smoke_quota.py  smoke_router_e2e.py  smoke_runner.py  smoke_status.py  smoke_tier23.py  smoke_triage.py  smoke_triage_failures.py  smoke_verify_graduate.py  train_fp002.py
src/orchestrator/: __init__.py  audit.py  auto_fix.py  claude_cli.py  cli.py  health.py  launcher.py  local_model.py  pm.py  quota.py  report.py  roadmap.py  router.py  status.py  triage.py  triage_failures.py  worklist.py
src/orchestrator/harness/: __init__.py  failure.py  git_ops.py  runner.py
tests/: README.md  conftest.py  test_audit.py  test_auto_fix_gitops.py  test_auto_fix_pure.py  test_auto_fix_tiers.py  test_claude_cli.py  test_cli.py  test_harness_bundle.py  test_harness_git.py  test_harness_runner.py  test_launcher.py  test_local_model.py  test_pm.py  test_quota.py  test_report.py  test_roadmap.py  test_router.py  test_status.py  test_triage.py  test_worklist.py
