[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commander-orchestrator"
version = "0.1.0"
description = "Local orchestrator routing tasks between Ollama and Claude CLI (subscription auth)."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
orch = "orchestrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Note: tests/ is the offline unit suite (no Ollama/Claude/network/Forge).
# The scripts/smoke_*.py files remain separate manual integration harnesses.
